Fix for <video> overlap on Syllabus
closes: CNVS-29502

Test Plan:
- Go to syllabus > edit syllabus > add a video that uses a <video> tag
(adding a video from canvas files works best)
- Resize browser, shouldn't overlap right side anymore

Reviewed-on: https://gerrit.instructure.com/80150
Tested-by: Jenkins
Product-Review: Chris Hart <chart@instructure.com>
QA-Review: Nathan Rogowski <nathan@instructure.com>

--- a/app/stylesheets/components/_g_instructure.scss
+++ b/app/stylesheets/components/_g_instructure.scss
@@ -137,7 +137,9 @@
   }
 }
 
-.user_content iframe {
+.user_content iframe,
+.user_content video
+ {
   border: 0;
   padding: 0;
   margin: 0;
